--- a/contacts.html
+++ b/contacts.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title><strong>Contacts</strong></title>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
   <h3><strong>My Contacts</strong></h3>
