--- a/hobbies.html
+++ b/hobbies.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title><strong>My Hobbies</strong></title>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
     <h3><strong>My Hobbies</strong></h3>
