--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
 <head>
   <meta charset="utf-8">
   <title>CollinsKibenon Personal Site</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="https://pbs.twimg.com/profile_images/1219652700268191744/njSsbAN9_400x400.jpg" alt="Collins Profile picture twitter"</td>
+      <td><img src="https://pbs.twimg.com/profile_images/1219652700268191744/njSsbAN9_200x200.jpg" alt="Collins Profile picture twitter"</td>
       <td> <h1>Collins Kibenon</h1>
+
       <p>I am currently at the University of Nairobi studying my third level of studies.I love playing basketball and football and I support manchester united and Golden State warriors</p>
     </td></tr>
   </table>
@@ -18,7 +20,7 @@
 
   <p>Student at the <em>University of Nairobi.</em></p>
 
-  <hr>
+    <hr>
 
   <ul>
 
