--- a/contacts.html
+++ b/contacts.html
@@ -3,25 +3,28 @@
   <head>
     <meta charset="utf-8">
     <title><strong>Contacts</strong></title>
-    <link rel="stylesheet" href="css/styles.css">
-  </head>
+        <link rel="stylesheet" href="css/styles.css">
+      </head>
   <body>
-  <h3><strong>My Contacts</strong></h3>
-    <ol>
-      <li>telephone number:0722281397</li>
-      <li>Gmail:collinskibz53@gmail.com,collinskibz53@gmail.students.uonbi.ac.ke</li>
-      <li>Instagram:Collins Kibz</li>
-    </ol>
-    <hr>
-    <form class="" action="mailto:collinskibz53@gmail.com" method="post" enctype="text/plain">
-    <label for="">Your Name</label>
-    <input type="text" name="YourName" value=""> <br>
-    <label for="">Your email</label>
-    <input type="email" name="YourEmail" value=""><br>
-    <label>Your Message</label>
-    <textarea name="YourMessage" rows="10" cols="30"></textarea>
-    <input type="submit" name="">
-    </form>
 
+      <body>
+      <h3><strong>My Contacts</strong></h3>
+        <ol>
+          <li>telephone number:0722281397</li>
+          <li>Gmail:collinskibz53@gmail.com,collinskibz53@gmail.students.uonbi.ac.ke</li>
+          <li>Instagram:Collins Kibz</li>
+        </ol>
+        <hr>
+        <form class="" action="mailto:collinskibz53@gmail.com" method="post" enctype="text/plain">
+        <label for="">Your Name</label>
+        <input type="text" name="YourName" value=""> <br>
+        <label for="">Your email</label>
+        <input type="email" name="YourEmail" value=""><br>
+        <label>Your Message</label>
+        <textarea name="YourMessage" rows="10" cols="30"></textarea>
+        <input type="submit" name="">
+        </form>
+
+      </body>
   </body>
 </html>
