--- a/index.html
+++ b/index.html
@@ -3,81 +3,69 @@
 
 <head>
   <meta charset="utf-8">
-  <title>CollinsKibenon Personal Site</title>
+  <title> Collins Kibenon</title>
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="icon" href="favicon.ico">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Sacramento&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
-  <table cellspacing="20">
-    <tr>
-      <td><img src="https://pbs.twimg.com/profile_images/1219652700268191744/njSsbAN9_200x200.jpg" alt="Collins Profile picture twitter"</td>
-      <td> <h1>Collins Kibenon</h1>
+  <div class="top-container">
+    <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
 
-      <p>I am currently at the University of Nairobi studying my third level of studies.I love playing basketball and football and I support manchester united and Golden State warriors</p>
-    </td></tr>
-  </table>
+    <h1> I'm Collins</h1>
+    <h2> <span class="pro">pro</span>grammer</h2>
+    <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
+    <img src="images/mountain.png" alt="mountain-img">
+  </div>
 
 
-  <p>Student at the <em>University of Nairobi.</em></p>
-
+  <div class="middle-container">
+    <div class="profile">
+      <img src="https://pbs.twimg.com/profile_images/1219652700268191744/njSsbAN9_200x200.jpg" alt="Collins Profile picture twitter" />
+      <h2>Hello.</h2>
+      <p>I am Collins Kibenon. I am currently in my fourth level in the University of Nairobi pursuing microprocessor technology and instrumentation.In addition, I am perfecting ways of app development.</p>
+    </div>
     <hr>
-
-  <ul>
-
-    <h3> Work experience   </h3>
-
-    <table cellspacing= 10>
-      <thead>
-        <th>Dates</th>
-        <th>work</th>
-      </thead>
-      <tbody>
-
-      </tbody>
-      <tfoot>
-
-      </tfoot>
-      <tr>
-        <td>2015-2020</td>
-        <td>Played basketball</td>
-      </tr>
-      <tr>
-      <td>2019-2020</td>
-      <td>Farming</td>
-      </tr>
-    </table>
-    <hr>
-    <h3>Skills</h3>
+    <div class="skills">
+      <h2>My Skills</h2>
+    </div>
+    <div class="skill-row">
+      <img class="web" src="images/development.png" alt="">
+      <h3>Web development</h3>
+      <p>I am currently still learning web development and I aim to be the best web developer by the end of the course.</p>
+    </div>
+  </div>
+  <div class="skill-row">
+    <img class="basketball" src="images/basketball.png " alt="">
+    <h3> Games and sports</h3>
+    <p>I play basketabll a lot and its really fun. I also play fotball</p>
+  </div>
 
 
+  <hr>
+  <div>
+    <h3>My hobbies</h3>
+    <a href="hobbies.html"> Click me</a>
+  </div>
+  <hr>
+  <div class="contact-me">
+    <h2>Get In Touch</h2>
+    <h3>If you have passion in web development or any questions.</h3>
+    <p>You can contact me on the links below</p>
+    <a href="contacts.html" class="BUTTON_OOE">My contacts</a>
+  </div>
 
-
-    <table cellspacing="10">
-      <tr>
-      <td>Playing Fifa </td>
-      <td>⭐⭐⭐⭐⭐</td>
-    </tr>
-<tr>
-  <td>Playing basketball</td>
-  <td>⭐⭐⭐⭐</td>
-</tr>
-<tr>
-  <td>Playing Football </td>
-  <td>⭐⭐⭐</td>
-  </tr>
-  <tr>
-    <td>Web Development</td>
-    <td>⭐⭐⭐</td>
-  </tr>
-    </table>
-    <hr>
-
-<h3> <strong>Education</strong></h3>
-  <li>.<a href="https://www.google.com/search?gs_ssp=eJwFwUEKgCAQAEC61h_CS-d2S7R8Qr9oNU3QDEuw3zfTdqMb8X3eWBGgUQNUlAtqPq-krRVojYJK5gBNXJCEGSYxbX0oroTCKO3Z-MuxO_u45489-kwp_CiEGuU&q=lugulu+boarding+primary+school&rlz=1C1CHBF_enKE931KE931&oq=lugulu+&aqs=chrome.2.69i57j0i131i433i457j46i175i199j0l5.6134j0j7&sourceid=chrome&ie=UTF-8">Lugulu Boarding Primary School</a></li>
-  <li>.<a href="https://www.google.com/search?gs_ssp=eJzj4tLP1TdIzzAzKTM0YLRSNagwNLcwTLVITTY0M0i1NDM3tTKoSDFPNjc3MbUwNDYyMEy2SPISKi5RyCnNTlUvVsjOzM3MAUIApIAUOg&q=st+luke%27s+kimilili&rlz=1C1CHBF_enKE931KE931&oq=st+lukes&aqs=chrome.4.69i57j0i10i457j46i175i199j0i10j46i10i175i199j0j46i10j0i10.5484j0j7&sourceid=chrome&ie=UTF-8">St Lukes Boys high School</a></li>
-  <li>.<a href="https://www.google.com/search?gs_ssp=eJzj4tFP1zcsNDNKMTc1KFZgNGB0YPASLc3LLEstKs4sqVTIT1PIS8wsyk_KBADskAyl&q=university+of+nairobi&rlz=1C1CHBF_enKE931KE931&oq=university&aqs=chrome.2.69i57j35i39j46i199i291i433j0i20i263i457j46i433l2j0.7367j0j7&sourceid=chrome&ie=UTF-8">University of Nairobi</a></li></ul>
-  <a href="hobbies.html">My Hoobies</a>
-  <a href="contacts.html">My Contacts</a>
+  <div class="bottom-container">
+    <a class="footer-link" href="https://www.facebook.com/collins.kibenon/">Facebook</a>
+    <a class="footer-link" href="https://www.instagram.com/collinskibenon/">Instagram</a>
+    <a class="footer-link" href="https://collinskibenon.github.io/cv/">Website</a>
+    <a class="footer-link" href="https://twitter.com/Collinskibz?s">Twitter</a>
+    <p class="copyright">© 2021 KIBENON.</p>
+  </div>
 </body>
 
 </html>
